# agents

./: pyproject.toml  report.txt
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  3_lab3_rafi.ipynb  4_lab4_rafi.ipynb
2_openai/deep_research/: email_agent.py
3_crew/stock_picker_rafi/: README.md  pyproject.toml
3_crew/stock_picker_rafi/src/stock_picker_rafi/: crew.py  main.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  memory.db-shm  memory.db-wal
guides/: 11_async_python.ipynb
