[project]
name = "stock_picker_rafi"
version = "0.1.0"
description = "stock_picker_rafi using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
stock_picker_rafi = "stock_picker_rafi.main:run"
run_crew = "stock_picker_rafi.main:run"
train = "stock_picker_rafi.main:train"
replay = "stock_picker_rafi.main:replay"
test = "stock_picker_rafi.main:test"
run_with_trigger = "stock_picker_rafi.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
